--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>🚀 Prédiction des maladies chronique!</h1>
+<header>
+    <section>
+        <!-- <h1>🚀 Prédiction des maladies chronique!</h1> -->
+    </section>
+</header>
+<!-- <h1>🚀 Prédiction des maladies chronique!</h1> -->
 <app-prediction-form></app-prediction-form>
