--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,14 @@ h1{
     text-align: center;
     margin: 50px;
 }
+
+header{
+    /* background-color: #333; */
+    background-image: "frontend/src/assets/img/adobestock-454729458-scaled.jpeg";
+    background-size: cover;
+    padding: 180px 0px 140px 0px;
+    /* color: white; */
+    padding: 10px;
+    text-align: center;
+}
+
