--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: ui-sans-serif,-apple-system,system-ui,Segoe UI,Helvetica,Apple Color Emoji,Arial,sans-serif,Segoe UI Emoji,Segoe UI Symbol; 
+    background-color: #212121;
+    color: #FFFFFF;
+}
+
+.mat-mdc-slide-toggle .mat-internal-form-field {
+    color: #FFFFFF!important;
+}
