chatPMC css rectif env

--- a/src/app/components/prediction-form/prediction-form.component.html
+++ b/src/app/components/prediction-form/prediction-form.component.html
@@ -117,9 +117,9 @@
     </div>
 
     <!-- Boutons d'export -->
-    <div class="text-center mt-3">
-      <button class="btn btn-success" (click)="exporterCSV()">📥 Exporter en CSV</button>
-      <button class="btn btn-info" (click)="exporterExcel()">📊 Exporter en Excel</button>
+    <div class="text-center mt-3 exports">
+      <button class="btn btn-success" (click)="exporterCSV()">Exporter en CSV</button>
+      <button class="btn btn-info" (click)="exporterExcel()">Exporter en Excel</button>
     </div>
   </div>
 </div>
