--- a/src/app/components/prediction-form/prediction-form.component.css
+++ b/src/app/components/prediction-form/prediction-form.component.css
@@ -52,9 +52,10 @@ input:focus {
 /* 🌟 Boutons */
 button {
   width: auto;
+  /* display: block; */
   padding: 10px 15px;
   border-radius: 5px;
-  color: rgb(143, 143, 143);
+  color: rgb(153, 153, 153);
   border: none;
   font-size: 16px;
   cursor: pointer;
@@ -70,15 +71,20 @@ button:hover {
 }
 
 button.btn.mt-3 {
-  border: solid 1px rgb(143, 143, 143);
+  border: solid 1px rgb(153, 153, 153);
   border-radius: 25px;
   margin: 0 45px;
 }
 
 span.mdc-tab__text-label, .mat-mdc-select-trigger  {
-  color: rgb(143, 143, 143) ;
+  color: rgb(153, 153, 153) ;
 }
 
+.exports {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 .btn-primary, span, .form-control {
   border: none;
@@ -92,13 +98,14 @@ span.mdc-tab__text-label, .mat-mdc-select-trigger  {
 }
 
 .btn-success {
-  background-color: #28a745;
-  color: white;
+  background-color: transparent;
+  display: block;
+  color: rgb(153, 153, 153);
 }
 
 .btn-info {
-  background-color: #3a4142;
-  color: white;
+  background-color: transparent;
+  color: rgb(153, 153, 153);
 }
 
 /* Désactiver bouton */
