--- a/src/app/components/prediction-form/prediction-form.component.css
+++ b/src/app/components/prediction-form/prediction-form.component.css
@@ -190,3 +190,21 @@ mat-paginator {
 .fade-in {
   animation: fadeIn 0.5s forwards;
 }
+
+
+select{
+  background-color: transparent;
+  display: block;
+  color: rgb(153, 153, 153);
+  border: none;
+  padding-left: 40px;
+}
+
+.prediction-column {
+  font-weight: bold;
+  color: white;
+  background-color: #28a745;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+}
