--- a/src/app/components/prediction-form/prediction-form.component.css
+++ b/src/app/components/prediction-form/prediction-form.component.css
@@ -223,3 +223,49 @@ mat-paginator {
   border-radius: 5px;
   padding: 5px;
 }
+
+/* Responsive */
+@media (min-width: 768px) {
+  .col-md-4 {
+      flex: 0 0 auto;
+      width: 33.33333333%;
+      text-align: center;
+  }
+}
+
+.aide-toggle {
+  position: fixed;
+  text-decoration: none;
+  top: 11vh;
+  /* left: 10px; */
+  z-index: 1050;
+  color: rgb(153, 153, 153);
+  /* font-weight: bold; */
+}
+
+.aide-panel {
+  position: fixed;
+  top: 15vh;
+  left: 15px;
+  width: 22vw;
+  max-height: 80vh;
+  overflow-y: auto;
+  padding: 15px;
+  background: #8f8f8fac;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  z-index: 1050;
+  transition: all 0.3s ease;
+  display: none;
+}
+
+.aide-panel.active {
+  display: block;
+}
+  
+
+input#populationSize {
+  background: #ffffff00;
+  color: #FFFFFF;
+  border: #575757 solid 1px;
+}
