--- a/src/app/components/prediction-form/prediction-form.component.html
+++ b/src/app/components/prediction-form/prediction-form.component.html
@@ -209,13 +209,33 @@
       </button>
 
       <div class="aide-panel" [class.active]="showAide">
-        <h5>Descriptif des champs :</h5>
+        <h5>Plages des données :</h5>
         <ul>
-          <li><strong>Cyclepds</strong> → Nombre de cycles de soins</li>
-          <li><strong>Region</strong> → Région administrative</li>
-          <li><strong>Dept</strong> → Département</li>
-          <li><strong>Année</strong> 2015 <- -> 2025</li>
-          <!-- Ajoute ici tous les autres champs avec une courte description -->
+          <li><strong>Année</strong><em> 2020 → 2025</em></li>
+          <li><strong>Mois</strong><em>  1 → 12</em></li>
+          <li><strong>Carbone_monoxide</strong><em>134 → 273</em></li>
+          <li><strong>Poids_moyen</strong><em> 25 → 100 kg</em></li>
+          <li><strong>P_animal</strong><em> 1 → 20</em></li>
+          <li><strong>Agglo9</strong><em> 1 → 9</em></li>
+          <li><strong>Entrerep</strong><em> 1 → 9</em></li>
+          <li><strong>Fastfood</strong><em> 1 → 9</em></li>
+          <li><strong>Ozone</strong><em> 25 → 70 µg/m³</em></li>
+          <li><strong>Dip</strong><em> 1 → 14</em></li>
+          <li><strong>Sulphur_dioxide</strong><em> 0.75 → 3.3 µg/m³</em></li>
+          <li><strong>Temps_act_phy</strong><em> 1 → 2000 min/semaine</em></li>
+          <li><strong>Sedendaire</strong><em> 1 → 690 min/semaine</em></li>
+          <li><strong>Sexeps</strong><em> 1 = Homme, 2 = Femme</em></li>
+          <li><strong>Visies_medecins</strong><em> 0 → 100</em></li>
+          <li><strong>Pm2_5</strong><em> 7 → 21 µg/m³</em></li>
+          <li><strong>Taille</strong><em> 100 → 195 cm</em></li>
+          <li><strong>IMC</strong><em> 10 → 56</em></li>
+          <li><strong>Situ_prof</strong><em> 1 → 7</em></li>
+          <li><strong>Grass_pollen</strong><em> 0 → 29 grains/m³</em></li>
+          <li><strong>Enrich</strong><em> 1 → 5</em></li>
+          <li><strong>Heur_trav</strong><em> 0 → 99</em></li>
+          <li><strong>Situ_mat</strong><em> 1 → 6</em></li>
+          <li><strong>Nitrogen_dioxide</strong><em> 11 → 30 µg/m³</em></li>
+          <li><strong>Fqvpo</strong><em> 1 → 9</em></li>
         </ul>
       </div>
      
